更新面试宝典

--- a/plan/面试/面试宝典.md
+++ b/plan/面试/面试宝典.md
@@ -477,6 +477,129 @@ transaction.add(R.id.content, IndexFragment,”Tab1″);
 IndexFragment＝FragmentManager.findFragmentByTag(“Tab1″);
 找到对应的引用，然后继续上面的hide,show;
 
+### Binder 机制
+
+　　是一种实现 android 跨进程通讯的方式，由物理上的虚拟物理设备驱动，和 Binder 类组成。
+
+　　android是基于linux内核的。
+
+#### Linux 进程空间划分
+
+* 一个进程空间分为 用户空间 & 内核空间（`Kernel`），即把进程内用户 & 内核隔离开来，所有进程共用1个内核空间。
+
+* 二者区别：
+
+  1. 进程间，用户空间的数据不可共享，所以用户空间 = 不可共享空间
+  2. 进程间，内核空间的数据可共享，所以内核空间 = 可共享空间
+
+* 进程内 用户空间 & 内核空间 进行交互 需通过 系统调用，
+
+  主要通过函数：
+   copy_from_user（）：将用户空间的数据拷贝到内核空间
+   copy_to_user（）：将内核空间的数据拷贝到用户空间
+
+![](image/linux进程交换数据.png)
+
+#### 进程隔离
+
+　　为了保证 安全性 & 独立性，一个进程 不能直接操作或者访问另一个进程，即`Android`的进程是相互独立、隔离的。
+
+#### 跨进程通信（IPC）
+
+- 隔离后，由于某些需求，进程间 需要合作 / 交互
+- 跨进程间通信的原理
+  1. 先通过 进程间 的内核空间进行 数据交互
+  2. 再通过 进程内 的用户空间 & 内核空间进行 数据交互，从而实现 进程间的用户空间 的数据交互
+
+![img](https://upload-images.jianshu.io/upload_images/944365-f9565f881b81b911.png?imageMogr2/auto-orient/strip%7CimageView2/2)
+
+　　而`Binder`，就是充当 连接 两个进程（内核空间）的通道。
+
+#### 传统跨进程通信的基本原理
+
+![img](image/跨进程通讯原理.png)
+
+　　而 Binder 的作用则是：连接 两个进程，实现了mmap() 系统调用，主要负责 创建数据接收的缓存空间 & 管理数据接收缓存，传统的跨进程通信需拷贝数据 2 次，但 Binder 机制只需 1 次，主要是使用到了内存映射。
+
+#### 什么是内存映射？
+
+　　内存映射是关联 进程中的1个虚拟内存区域 & 1个磁盘上的对象，使得二者存在映射关系。
+
+![img](image/内存映射原理.png)
+
+　　内存映射的实现过程主要是通过 Linux 系统下的系统调用函数： mmap（），该函数的作用 = 创建虚拟内存区域 + 与共享对象建立映射关系。
+
+#### 内存映射的作用
+
+1. 实现内存共享：如 跨进程通信
+2. 提高数据读 / 写效率 ：如 文件读 / 写操作
+
+#### Binder
+
+
+
+![](image/Binder实现跨进程通信.png)
+
+　　所以 Binder 驱动一共有两个作用
+
+1. 创建接受缓存区
+2. 通知 client 和 service 数据准备就绪
+3. 管理线程
+
+　　Binder驱动 属于 进程空间的 内核空间，可进行进程间 & 进程内交互
+
+![img](image/简单示意图.png)
+
+#### Binder请求的线程管理
+
+　　Binder 模型的线程管理 采用 Binder 驱动的线程池，并由 Binder 驱动自身进行管理。
+
+　　一个进程的 Binder 线程数默认最大是 16，超过的请求会被阻塞等待空闲的 Binder 线程。
+
+#### Android中的Binder实现机制
+
+　　android 中提供了 Binder 实体类，Binder 实体是 Server进程在 Binder 驱动中的存在形式。
+
+　　该对象保存 Server 和 ServiceManager 的信息（保存在内核空间中），Binder 驱动通过内核空间的 Binder 实体找到用户空间的 Server 对象，注册服务后，Binder 驱动持有 Server 进程创建的 Binder 实体。
+
+```java
+public class Binder implement IBinder{
+    // Binder 机制在 Android 中的实现主要依靠的是 Binder 类，其实现了 IBinder 接口
+    // IBinder 接口：定义了远程操作对象的基本接口，代表了一种跨进程传输的能力
+    // 系统会为每个实现了 IBinder 接口的对象提供跨进程传输能力
+    // 即 Binder 类对象具备了跨进程传输的能力
+
+        void attachInterface(IInterface plus, String descriptor)；
+       	  // 作用：
+          // 1. 将（descriptor，plus）作为（key,value）对存入到 Binder 对象中的一个 Map<String,IInterface> 对象中
+          // 2. 之后，Binder 对象可根据 descriptor 通过 queryLocalIInterface（） 获得对应 IInterface 对象（即 plus）的引用，可依靠该引用完成对请求方法的调用
+
+        IInterface queryLocalInterface(Stringdescriptor) ；
+        // 作用：根据 参数 descriptor 查找相应的 IInterface 对象（即plus引用）
+
+        boolean onTransact(int code, Parcel data, Parcel reply, int flags)；
+        // 定义：继承自 IBinder 接口的
+        // 作用：执行 Client 进程所请求的目标方法（子类需要复写）
+        // 参数说明：
+        // code：Client 进程请求方法标识符。即 Server 进程根据该标识确定所请求的目标方法
+        // data：目标方法的参数。（Client 进程传进来的，此处就是整数 a 和 b）
+        // reply：目标方法执行后的结果（返回给 Client 进程）
+        // 注：运行在 Server 进程的 Binder 线程池中；当 Client 进程发起远程请求时，远程请求会要求系统底层执行回调该方法
+
+        final class BinderProxy implements IBinder {
+         // 即 Server 进程创建的 Binder 对象的代理对象类
+         // 该类属于 Binder 的内部类
+        }
+        // 回到分析1原处
+}
+```
+
+![img](image/绑定服务流程.png)
+
+　　流程总结：客户端通过 bindService，通过 Binder 驱动查询 ServiceManager 是否已经注册该服务，如果没有注册，Service 进程会向 Binder 驱动发起服务注册请求，一旦注册，调用该服务的 onBind 返回一个 Binder 对象到 Binder 驱动，已经注册则意味着 Binder 驱动内包含这个 Binder 对象，Binder 驱动返回一个 BinderProxy 对象，并通过回调，传递给客户端，客户端通过这个 BinderProxy( 在 java 层仍然是 Binder 对象)操作 Binder 驱动内的 Binder 对象（transact 方法），Binder 驱动含有很多的 Binder 对象，它们是通过 InterfaceToken 区分不同服务的。
+
+![img](image/Binder总示意图.png)
+
 ### Handler
 
 #### 消息机制的架构
@@ -1775,7 +1898,7 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
 　　Unsafe 的 compareAndSwap() 方法最终会对应到 cpu 的对应原语，因此，它的效率非常高。
 
-#### * 同步的知识
+#### 同步的知识
 
 ##### 内存模型的相关概念
 
@@ -1799,39 +1922,858 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
    缓存一致性核心的思想是：当 CPU 写数据时，如果发现操作的变量是共享变量，即在其他 CPU 也存在该变量的副本，会发出信号通知其他 CPU 将该变量的缓存行置为无效状态，因此当其他 CPU 需要读取这个变量时，发现自己缓存中缓存该变量的缓存行是无效的，那么它就会从内存重新读取。
 
-   ![](/Users/miaomiao/Desktop/android/android_learning_notes/Java/线程/image/内存模型.jpg)
+   ![](image/内存模型.jpg)
 
 　　这两种方式都是硬件层面上提供的方式。
 
-#### * volatile 知识
+##### 并发编程中的三个概念
 
+###### 原子性
 
+　　原子性：即一个操作或者多个操作要么全部执行并且执行的过程不会被任何因素打断，要不就都不执行。
 
-#### * synchronized 知识
+　　原子性是拒绝多线程操作的，不论是多核还是单核，具有原子性的量，同一时刻只能有一个线程来对它进行操作。简而言之，在整个操作过程中不会被线程调度器中断的操作，都可认为是原子性。
 
+　　而非原子性操作都会存在线程安全问题，需要使用同步技术来让它变成一个原子操作。
 
+###### 可见性
 
-#### * ReentrantLock 知识
+　　可见性是指当多个线程访问同一个变量时，一个线程修改了这个变量的值，其他线程能够立即看达到修改的值。
 
+###### 有序性
 
+　　有序性：即程序执行的顺序按照代码的先后顺序执行。
+
+　　Java 内存模型中的有序性可以总结为：如果在本线程内观察，所有操作都是有序的，如果在一个线程中观察另一个线程，所有操作都是无序的。
+
+　　破坏有序性的原因：处理器为了提高程序运行效率，可能会对输入代码进行指令重排序优化，它不保证程序中各个语句的执行先后顺序同代码中的顺序一致，但是它会保证程序最终执行结果和代码顺序执行的结果是一致的，。
+
+　　而指令重排序不会影响单个线程的执行，但是会影响到线程并发执行的正确性。
+
+　　要想并发程序正确地执行，必须要保证原子性、可见性以及有序性。要是有一个没有被保证，就有可能会导致程序运行不正确。
+
+##### Java 内存模型（JMM）
+
+　　在 Java 虚拟机规范中试图定义一种 Java 内存模型（Java Memory Model，JMM）来屏蔽各个硬件平台和操作系统的内存访问差异，以实现让 Java 程序在各个平台下都能达到一致的内存访问效果。
+
+　　JMM 定义了线程和主内存之间的抽象关系：Java 内存模型规定所有的变量都是存在主存当中（类似于物理内存）。每个线程都有自己的工作内存（类似于高速缓冲）。线程对变量的所有操作都必须在工作内存中进行，而不能直接对主存进行操作，并且每个线程不能访问其他线程的工作内存。
+
+　　注意，为了获得较好的执行性能，Java 内存模型并没有限制执行引擎使用处理器的寄存器或者高速缓存来提升指令执行速度，也没有限制编译器对指令进行重排序。也就是说，在 java 内存模型中，也会存在缓存一致性问题和指令重排序的问题。
+
+##### Java 语言本身对原子性、一致性以及有序性提供的保证
+
+###### 原子性
+
+　　Java 中的原子性操作包括：
+
+1. 基本类型的读取和赋值操作，且赋值必须是数字赋值给变量，变量之间的相互赋值不是原子性操作。
+2. 所有引用 reference 的赋值操作。
+3. Java.concurrent.Atomic.* 包中所有类的一切操作，比如：AtomicInteger、AtomicLong、AtomicReference 等。
+
+　　Java 内存模型只保证了上面的操作是原子性操作，如果要实现更大范围的原子性，可以通过 synchronized 和 Lock 来实现。由于 synchronized 和 Lock 能够保证任一时刻只有一个线程执行该代码块，那么自然就不存在原子性问题了，从而保证了原子性。 
+
+###### 可见性
+
+　　在多线程环境中，一个线程对共享变量的操作对其他线程是不可见的。Java 提供了 volatile 关键字来保证可见性。
+
+　　当一个共享变量被 volatile 修饰时，表示线程本地内存无效，当一个线程修改共享变量后，它会保证修改的值会立即被更新到主存，当有其他线程需要读取时，它会去内存中读取新值。
+
+　　而普通的共享变量不能保证可见性，因为普通共享变量被修改之后，什么时候被写入主存是不确定的，当其他线程去读取时，此时内存中可能还是原来的旧值，因此无法保证可见性。i
+
+　　另外，通过 synchronized 和 Lock 也能够保证可见性，synchronized 和 Lock 能保证同一时刻只有一个线程获取锁然后执行同步代码，并且在释放锁之前会将变量的修改刷新到主内存中，因此可以保证可见性。 final 也是保证可见性的。
+
+###### 有序性
+
+ 　　在 Java 内存模型中，允许编译器和处理器对指令进行重排序，但是重排序过程不会影响到单线程程序的执行，却会影响到多线程并发执行的正确性。
+
+　　在 Java 里面，可以通过 volatile 关键字来保证一定的 “ 有序性 ”，因为 volatile 其本身包含 “ 禁止指令重排序 ” 的语义。另外可以通过 synchronized 和 Lock 来保证有序性，很显然，synchronized 和 Lock 保证每个时刻只有一个线程执行同步代码，相当于是让线程顺序执行同步代码，自然就保证了有序性。
+
+　　Java 内存模型具备一些先天的 “ 有序性 ”，既不需要通过任何手段就能够得到保证的有序性，这个通常也称为 happends-before 原则（先行发生原则）。如果两个操作的执行次序无法从 happends-before 原则推导出来，那么就不能保证它们的有序性，虚拟机可以随意对它们进行重排序。
+
+　　happends-before 原则（先行发生原则）：
+
+* 程序次序规则：一个线程内，按照代码顺序，书写在前面的操作先行发生于书写在后面的操作。
+* 锁定规则：一个 unLock 操作先行发生于后面对同一个锁的 lock 操作。
+* volatile 变量规则：对一个变量的写操作先行发生于后面对这个变量的读操作。
+* 传递规则：如果操作 A 先行发生于操作 B，而操作 B 又先行发生于操作 C，则可以得出操作 A 先行发生于操作 C。
+* 线程启动规则：Thread 对象的 start() 方法先行发生于此线程的每一个动作。
+* 线程中断规则：对线程 interrupt() 方法的调用先行发生于被中断线程的代码检测到中断事件的发生。
+* 线程终结规则：线程中所有的操作都先行发生于线程的终止检测，可以通过 Thread.join() 方法结束、Thread.isAlive() 的返回值手段检测到线程已经终止执行。
+* 对象终结规则：一个对象的初始化完成先行发生于它的 finalize() 方法的开始。
+
+##### 锁的互斥与可见性
+
+　　锁提供了两种主要特性：**互斥**（mutual exclusion）和**可见性**（visibility）。
+
+1. 互斥即一次只允许一个线程持有某个特定的锁，一次就只有一个线程能够使用该共享锁。
+
+2. 可见性必须确保释放锁之前对共享数据做出的更改对于随后获得该锁的另一个线程是可见的。也即当一条线程改变了共享变量的值，新值对于其他线程来说是可以立即得知的。
+
+   如果没有同步机制提供的这种可见性保证，线程看到的共享变量可能是修改前的值或不一致的值，这将引发许多严重问题。
+
+#### volatile 知识
+
+##### volatile 定义
+
+　　Java 语言规范第三版中对 volatile 的定义如下：java 编程语言允许线程访问共享变量，为了确保共享变量能被准确和一致的更新，线程应该确保通过排他锁单独获得这个变量。Java 语言提供了 volatile，在某些情况下比锁更加方便。如果一个字段被声明成 volatile，java 线程内存模型确保所有线程看到这个变量的值是一致的。
+
+　　volatile 是一个类型修饰符，volatile 的作用是作为指令关键字，确保本条指令不会因编译器的优化而忽略。
+
+　　一旦一个共享变量（类的成员变量、类的静态成员变量）被 volatile 修饰之后，那么就具备了两层语义：
+
+1. 保证了不同线程对这个变量进行操作时的可见性，即一个线程修改了某个变量的值，那新值对其他线程来说是立即可见的。
+2. 禁止进行指令重排序。
+
+##### volatile 的内存语义
+
+　　happends-before （先行发生原则）对 volatile 的定义：volatile 变量的写，先发生于后续对这个变量的读。
+
+　　所以 volatile 的内存含义：
+
+1. 当写一个 volatile 变量时，JMM（Java 内存模型） 会把该线程对应的本地内存中的共享变量值刷新到主内存。
+2. 当读一个 volatile 变量时，JMM（Java 内存模型）会把该线程对应的本地内存置为无效，接下来将从主内存中读取共享变量，并更新本地内存的值。
+
+##### volatile 的特性
+
+* **可见性**：对一个 volatile 的变量的读，总是能看到任意线程对这个变量最后的写入。在写一个 volatile 变量时，JMM 会把该线程本地内存中的变量强制刷新到住内存中去，即一个线程修改了某个变量的值，这新值对其他线程来说是立即可见的。
+
+* **单个读或者写具有原子性**：对于单个 volatile 变量的读或者写具有原子性，复合操作不具有（如 i++）。
+
+* **互斥性**：同一时刻只允许一个线程对变量进行操作（互斥锁的特点）， volatile 写操作会导致其他线程中的缓存无效。
+
+* **有序性**：禁止指令重排序。
+
+  重排序是指编译器和处理器为了优化程序性能而对指令序列进行排序的一种手段。
+
+  重排序需要遵守一定规则：
+
+  * 重排序操作不会对存在数据依赖关系的操作进行重排序。
+  * 重排序是为了优化性能，但是不管怎么重排序，单线程下程序的执行结果不能被改变。
+
+##### volatile 的原理和实现机制
+
+　　为了提高处理速度，处理器不直接和内存进行通信，而是先将系统内存的数据读到内部缓存后再进行操作，但操作完不知道何时会写到系统内存。
+
+　　如果对声明了 volatile 的变量进行写操作，JVM 就会向处理器发送一条 lock 前缀的指令，将这个变量所在缓存行的数据写回到系统内存。
+
+　　为了保证各个处理器的缓存是一致的，实现了缓存一致性协议（MESI），每个处理器通过嗅探在总线上传播的数据来检查自己缓存的值是不是过期了，当处理器发现自己缓存行对应的内存地址被修改，就会将当前处理器的缓存行设置为无效状态，当处理器对这个数据进行修改操作的时候，如果发现本地缓存失效，会重新从系统内存中把数据读到处理器缓存里，既可以获取当前最新值。
+
+　　volatile 变量通过这样的机制就使得每个线程都能获得该变量的最新值
+
+###### 1. lock 指令
+
+　　《深入理解 Java 虚拟机》的一段话：“ 观察加入 volatile 关键字和没有加入 volatile 关键字时所生成的汇编代码发现，加入 volatile 关键字时，会多出一个 lock 前缀指令 ”。
+
+　　lock 前缀指令实际上相当于一个内存屏障。内存屏障，又称内存栅栏，是一个 CPU 指令。
+
+　　lock 前缀的指令在多核处理器下会引发两件事情：
+
+1. 将当前处理器缓存行的数据写回到系统内存。
+2. 写回内存的操作会使在其他 CPU 里缓存了该内存地址的数据无效。
+
+　　在 Pentium 和早期的 IA-32 处理器中，lock 前缀会使处理器执行当前指令时产生一个 LOCK# 信号，会对总线进行锁定，其他 CPU 对内存的读写请求都会被阻塞，直到锁释放。因为锁总线的开销比较大，锁总线期间其他 CPU 没法访问内存。后来的处理器，加锁操作是由高速缓存锁代替总线锁来处理。
+
+　　这种场景多缓存的数据一致通过缓存一致性协议（MESI）来保证。
+
+###### 2. 缓存一致性
+
+　　缓存是分段（line）的，一个段对应一块存储空间，称之为缓存行，它是 CPU 缓存中可分配的最小存储单元，大小 32 字节、64 字节、128 字节不等，这与 CPU 架构有关，通常来说是 64 字节。
+
+　　LOCK# 因为锁总线效率太低，因此使用了多组缓存。
+
+　　为了使其行为看起来如同一组缓存那样，因而设计了缓存一致性协议。
+
+　　缓存一致性协议有很多，但是日常处理的大多数计算机设备都属于 “ 嗅探 ” 协议。
+
+　　所有内存的传输都发生在一条共享的总线上，而所有的处理器都能看到这条总线。
+
+　　缓存本身是独立的，但是内存是共享资源，所有的内存访问都要经过仲裁（同一个指令周期中，只有一个 CPU 缓存可以读写内存）。
+
+　　CPU 缓存不仅仅在做内存传输的时候才与总线打交道，而是不停的嗅探总线上发生的数据交换，跟踪其他缓存在做什么。
+
+　　当一个缓存代表它所属的处理器去读写内存时，其他处理器都会得到通知，它们以此来使自己的缓存保持同步。
+
+　　只要某个处理器写内存，其他处理器马上知道这块内存在它们的缓存段中已经失效。
+
+###### 3. volatile 禁止重排序
+
+**volatile 禁止重排序的语义实现**
+
+　　在程序运行时，为了提高执行性能，JMM 在不改变正确语义的前提下，会允许编译器和处理器对指令进行重排序，JMM 为了保证在不同的编译器和 CPU 上有相同的结果，会在生成指令序列时在适当的位置插入特定类型的内存屏障指令来禁止特定类型的编译器重排序和处理器重排序，告诉编译器和 CPU：不管什么指令都不能和这条 Memory Barrier 指令重排序。
+
+　　内存屏障会提供 3 个功能：
+
+1. 它确保指令重排序时不会把其后面的指令排到内存屏障之前的位置，也不会把前面的指令排到内存屏障的后面；即在执行到内存屏障这句指令时，在它前面的操作已经全部完成。
+2. 它会强制将对缓存的修改操作立即写入主存。
+3. 如果是写操作，它会导致其他 CPU 中对应的缓存行无效。
+
+　　而为了实现 volatile 的内存语义，编译器在生成字节码时，就会在指令序列中插入内存屏障来禁止特定类型的处理器重排序。
+
+**volatile 禁止重排序的意思**
+
+　　volatile 关键字禁止指令重排序有两层意思：
+
+1. 当程序执行到 volatile 变量的读操作或者写操作时，在其前面的操作更改肯定全部已经进行，且结果已经对后面的操作可见，在其后面的操作肯定还没有进行。
+2. 在进行指令优化时，不能将在对 volatile 变量访问的语句放在其后面执行，也不能把 volatile 变量后面的语句放到其前面执行。
+
+**volatile 重排序规则**
+
+　　从表中归纳：
+
+* 当第一个操作是 volatile 读时，不管第二个操作是什么，都不能重排序。确保 volatile 读之后的操作不会被重排序到 volatile 读之前。
+* 当第二个操作是 volatile 写时，不管第一个操作是什么，都不能重排序。确保 volatile 写之前的操作不会背重排序到 volatile 写之后。
+* 当第一个操作是 volatile 写，第二个操作是 volatile 读时，不能重排序。
+
+　　对于编译器来说，发现一个最优布置来最小化插入屏障的总数几乎是不可能的，为此，JMM 采取了保守的策略。volatile 指令序列中插入内存屏障：
+
+* 在每个 volatile 写操作的前面插入一个 StoreStore 屏障。
+* 在每个 volatile 写操作的后面插入一个 StoreLoad 屏障。
+* 在每个 volatile 读操作的后面插入一个 LoadLoad 屏障。
+* 在每个 volatile 读操作的后面插入一个 LoadStore 屏障。
+
+　　volatile 写是在前面和后面分别插入内存屏障，而 volatile 读操作是在后面插入两个内存屏障。
+
+* StoreStore 屏障：禁止上面的普通写和下面的 volatile 写重排序。
+* StoreLoad 屏障：防止上面的 volatile 写于下面可能有的 volatile 读/写重排序。
+* LoadLoad 屏障：禁止下面所有的普通读操作和上面的 volatile 读重排序。
+* LoadStore 屏障：禁止下面所有的普通写操作和上面的 voaltile 读重排序。
+
+**volatile 写内存屏障**
+
+　　StoreStore 屏障：可以保证在 volatile 写之前，其前面的所有普通写操作已经对任意处理器可见了。
+
+　　StoreLoad 屏障：将 volatile 写操作刷新到内存。
+
+　　由此达到，volatile 写立马刷新到主内存的效果。
+
+**volatile 读内存屏障**
+
+　　LoadLoad 屏障：保障后续是读操作时，volatile 读装载到内存数据。
+
+　　LoadStore 屏障：保障后续是写操作时，volatile 读装载到内存数据。
+
+　　由此达到，volatile 读从主内存中读取共享变量，并更新本地内存的值。
+
+##### volatile 与 synchronized
+
+　　synchronized 关键字是防止多个线程同时执行一段代码，但是这样会影响程序执行效率，而 volatile 关键字在某些情况下性能要优于 synchronzied，但是要注意 volatile 关键字是无法替代 synchronized 关键字的，因为 volatile 关键字无法保证操作的原子性。
+
+　　相比于 synchronized （synchronized 通常称为重量级锁），volatile 更轻量级（也被称为轻量级的 synchronzied），因为它不会引起线程的阻塞从而导致上下文的切换和调度，但是 volatile 比 synchronized 的同步性较差。
+
+##### volatile 的使用条件
+
+　　通常来说，使用 volatile 必须具备以下 2 个条件：
+
+1. 对变量的写操作不依赖于当前值或能够保证只有单线程改变变量的值。
+
+   如 i++ 操作（包括读取变量的初始值、进行加 1 操作、写入工作内存三个操作），变量的写操作依赖当前值，所以不能保证线程安全。可以通过使用 synchronized、Lock、AtomicInteger 来解决 i++ 同步的问题。
+
+   可见性只能保证每次读取的是最新的值，但是 volatile 没办法保证对变量的操作的原子性。
+
+2. 该变量没有包含在具体其他变量的不变式中
+
+   如 i < value ，即使 i 变量声明为 volatile，但是 value 可能在运行判断的时候发生变化，所以也不能保证线程安全。
+
+　　实际上，这些条件表明，可以被写入 volatile 变量的这些有效值独立于任何程序的状态，包括变量的当前状态，也就是保证操作是原子性操作，才能保证使用 volatile 关键字的程序在并发时能够正确执行。
+
+##### 开销较低的 读 - 写 锁策略
+
+　　volatile 的功能还不足以实现计数器，因为 ++x 实际上是三种操作（读、添加、存储）的简单组合，如果多个线程凑巧试图同时对 volatile 计数器执行增量操作，那么它的更新值有可能会丢失。
+
+　　当读远多于写，结合使用内部锁和 volatile 变量来减少同步的开销。
+
+　　利用 volatile 保证读取操作的可见性；利用 synchronized 保证复合操作的原子性。
+
+　　如果更新不频繁的话，该方法可实现更好的性能，因为读路径的开销仅仅涉及 volatile 读操作，这通常要优于一个无竞争的锁获取的开销。
+
+```java
+public class Counter {
+	private volatile int value;
+	//利用 volatile 保证读取操作的可见性，读取时无需加锁
+	public int getValue() {
+		return value;
+	}
+	//使用 synchronized 加锁
+	public synchronized int increment(){
+		return value++;
+	}
+}
+```
+
+##### 双重检查（double - checked）
+
+　　线程安全的单例模式实现方式就是双重检查。
+
+```java
+//基于 volatile 的解决方案
+public class SafeDoubleCheckSingleton {
+	//通过 volatile 声明，实现线程安全的延迟初始化
+	private volatile static SafeDoubleCheckSingleton singleton;
+	private SafeDoubleCheckSingleton(){}
+	public static SafeDoubleCheckSingleton getInstance(){
+		if (singleton == null){
+			synchronized(SafeDoubleCheckSingleton.class){
+				if (singleton == null){
+					//原理利用 volatile 在于 禁止 “初始化对象” 和 “设置 singleton 指向内存空间” 的重排序
+					singleton = new SafeDoubleCheckSingleton();
+				}
+			}
+		}
+        return singleton;
+	}
+	
+}
+```
+
+　　在多线程环境中，如果没有对对象声明为 volatile，将可能出现以下情况，其他线程可能得到的是 null，而不是完成初始化的对象。
+
+　　也推荐单例模式的懒加载优雅写法 Initialization on Demand Holder(IODH)：
+
+```java
+public class Singleton {  
+    static class SingletonHolder {  
+        static Singleton instance = new Singleton();  
+    }  
+      
+    public static Singleton getInstance(){  
+        return SingletonHolder.instance;  
+    }  
+}
+```
+
+#### synchronized 知识
+
+##### synchronized 的三种使用方式
+
+###### 1. 修饰实例方法
+
+　　修饰实例方法，作用于当前对象实例加锁，进入同步代码前要获取当前对象**实例**的锁。
+
+###### 2. 修饰静态方法
+
+　　作用于当前类对象加锁，进入同步代码前要获得当前**类对象**的锁。也就是给当前类加锁，会作用于类的所有对象实例，因为静态成员不属于任何一个实例对象，是类成员（static 表明这是该类的一个静态资源，不管 new 了多少个对象，只有一份，所以对该类的所有对象都加了锁）。
+
+　　所以如果一个线程 A 调用一个实例对象的非静态 synchronized 方法，而线程 B 需要调用这个实例对象所属类的静态 synchronized 方法，是允许的，不会发生互斥现象，因为访问静态 synchronized 方法占用的锁是当前类的锁，而访问非静态 synchronized 方法占用的锁是当前实例对象锁。
+
+###### 3. 修饰代码块
+
+　　指定加锁对象，对给定对象加锁，进入同步代码库前要获得给定对象的锁。
+
+　　和 synchronized 方法一样，synchronized (this) 代码块也是锁定当前对象的。而 synchronized 关键字加到 static 静态方法和 synchronized(class) 代码块上都是是给 Class 类上锁。
+
+　　尽量不要使用 synchronized(String a)，因为 JVM 中，字符串常量具有缓冲功能。 
+
+##### synchronized 的使用案例
+
+* 同一个类中的 synchronized 方法与普通方法之间互斥吗？不互斥
+
+* 同一个类中 synchronized 方法可以调用其他的 synchronized 方法吗？可以
+
+  synchronized 是可重入锁，可以理解为同一个线程在已经持有该锁的情况下，可以再次获取锁，并且会在某个状态量上做 +1 操作。
+
+* 子类同步方法 synchronized 方法可以调用父类的 synchronized 方法吗？可以
+
+* 静态同步方法和非静态同步方法互斥吗？不
+
+  同步静态方法的锁是所在类的 Class 对象，而同步普通方法的锁是 this 对象，两个的锁不同，所以不会互斥。
+
+##### synchronized 关键字底层原理
+
+　　synchronized 关键字底层原理属于 JVM 层面。
+
+###### synchronized 同步语句块的情况
+
+```java
+public class SyncrhonziedDemo {
+	public void method(){
+		synchronized (this) {
+			System.out.println("synchronized 代码块");
+		}
+	}
+}
+```
+
+　　synchronized 同步语句块的实现使用的是 monitorenter 和 monitorexit 指令，其中 monitorenter 指令指向同步代码块的开始位置，monitorexit 指令则指向同步代码块的结束位置。
+
+　　当执行 monitorenter 指令时，线程试图获取锁也是获取 monitor（monitor 对象存在于每个 Java 对象的对象头中，synchronized 锁便是通过这种方式获取锁的，也是为什么 Java 中任意对象可以作为锁的原因）的持有权。
+
+　　当计数器为 0 则可以成功获取，获取后将锁计数器加 1。
+
+　　相应的在执行 monitorexit 指令后，将锁计数器减 1 ，表明当前锁被释放。
+
+　　如果获取对象锁失败，那当前线程就要阻塞等待，直到锁被另外一个线程释放为止。
+
+###### synchronized 修饰方法的情况
+
+```java
+public class SynchronizedDemo2 {
+	public synchronized void method() {
+		System.out.println("synchronized 方法");
+	}
+}
+```
+
+　　synchronized 修饰的方法并没有 monitorenter 指令和 monitorexit 指令，取而代之的是 ACC_SYNCHRONIZED 标识，该标识指明了该方法是一个同步方法，JVM 通过该 ACC_SYNCHRONIZED 访问标志来辨别一个方法是否声明为同步方法，从而执行相应的同步调用。
+
+##### JDK 1.6 之后的底层优化
+
+　　在 Java 早期版本中，synchronized 属于重量级锁，效率低下，因为监视器锁（monitor）是依赖于底层的操作系统的 Mutex Lock 来实现的，Java 的线程是映射到操作系统的原生线程之上的。如果要挂起或者唤醒一个线程，都需要操作系统完成，而操作系统实现线程之间的切换时需要从用户态转换到内核态，这个状态之间的转换需要相对比较长的时间，时间成本相对较高，这也是为什么早期的 synchronized 效率低的原因。
+
+　　在 Java 6 之后 Java 官方从 JVM 层面对 synchronized 做了较大优化，所以现在的 synchronized 锁效率也优化的很不错了。而 JDK 1.6 对锁的优化，增加了自旋锁、适应性自旋锁、锁消除、锁粗化、偏向锁、轻量级锁等技术来减少锁操作的开销。
+
+　　锁主要存在四种状态，依次是：无锁状态、偏向锁状态、轻量级锁状态、重量级锁状态，它们会随着竞争的激烈而逐渐升级。注意锁可以升级不可降级，这种策略是为了提高获得锁和释放锁的效率。
+
+##### synchronized 和 ReentrantLock 的对比
+
+###### 1. 两者都是可重入锁
+
+　　synchronized 和 ReentrantLock 都是可重入锁。
+
+　　” 可重入锁 “ 概念是：自己可以再次获取自己的内部锁。比如一个线程获得了某个对象的锁，此时这个对象锁还没有释放，当其再次想要获取这个对象的锁的时候还是可以获取的，如果不可锁重入的话，就会造成死锁。同一个线程每次获取锁，锁的计数器都自增 1 ，所以要等到锁的计数器下降为 0 时才能释放锁。
+
+###### 2. synchronized 依赖于 JVM 而 ReentrantLock 依赖于 API
+
+　　synchronized 是依赖于 JVM 实现的，虚拟机团队在 JDK 1.6 为 synchronized 关键字进行了很多优化，但是这些优化都是在虚拟机里面实现的，并没有直接暴露出来。
+
+　　ReentrantLock 是 JDK 层面实现的（也就是 API 层面，需要 lock() 和 unlock() 方法配合 try/finally 语句块来完成），所以可以通过查看源代码来查看它的具体实现。
+
+###### 3.ReentrantLock 比 synchronized 增加了一些高级功能
+
+　　相比 synchronized ，ReentrantLock增加了一些高级功能。主要来说有三点：1. 等待可中断；2.可实现公平锁；3.可实现选择性通知（锁可以绑定多个条件）。
+
+* ReentrantLock 提供了一种能够中断等待锁的线程的机制。
+
+  通过 lock.lockInterruptibly() 来实现这个机制。也就是说正在等待的线程可以选择放弃等待，改为处理其他事情。
+
+* ReentrantLock 可以指定是公平锁还是非公平锁。
+
+  而 synchronized 只能是非公平锁。所谓的公平锁就是先等待的线程先获得锁。
+
+  ReentrantLock 默认情况下是非公平的，可以通过 ReentrantLock 类的 ReentrantLock (boolean fair) 构造方法来指定是否是公平的。
+
+* synchronized 关键字与 wait() 和 notify/notifyAll() 方法结合可以实现等待 / 通知机制，ReentrantLock 类当然也可以实现，但是需要借助于 Condition 接口与 newCondition() 方法。
+
+  Condition 是 JDK 1.5 后才有的，它具有很好的灵活性，比如可以实现多路通知功能也就是在一个 Lock 对象中可以创建多个 Condition 实例（即对象监视器），线程对象可以注册在指定的 Condition 中，从而可以有选择性的进行线程通知，在调度线程上更加灵活。
+
+  在使用 notify/notifyAll() 方法进行通知时，被通知的线程是由 JVM 选择的，用 ReentrantLock 类结合 Condition 实例可以实现 ” 选择性通知 “，这个功能非常重要，而且是 Condition 接口默认提供的。
+
+  而 synchronized 关键字就相当于整个 Lock 对象中只有一个 Condition 实例，所有的线程这样会造成很大的效率问题，而 Condition 实例的 singalAll() 方法只会唤醒注册在该 Condition 实例上的所有等待线程。
+
+　　如果想使用上述功能，那么选择 ReentrantLock 是一个不错的选择。
+
+###### 4. 性能已不是选择标准
+
+　　在 JDK 1.6 之前，synchronized 的性能是比 ReentrantLock 差很多。具体表示为 synchronized 关键字吞吐量随线程数的增加，下降得非常严重。而 ReentrantLock 基本保持一个比较稳定的水平。但是在 JDK 1.6 之后 JVM 团队对 synchronized 关键字做了很多优化，所以 JDK 1.6 之后，synchronized 和 ReentrantLock 的性能基本是持平了。
+
+　　在 JDK 1.6 之后，性能已经不是选择 synchronized 和 ReentrantLock 的影响因素了。而且虚拟机在未来的性能改进中会更偏向于原生的 synchronized，所以还是提倡在 synchronized 能满足需求的情况下，优先考虑使用 synchronized 关键来进行同步，优化后的 synchronized 和 ReentrantLock 一样，在很多地方都是用到了 CAS 操作。
+
+**第2种答案**
+
+**ReentrantLock**
+
+* ReentrantLock 是 JDK 方法，需要手动声明加锁和释放锁，因此语法相对复杂些，如果忘记释放锁容易导致死锁。
+* ReentrantLock 具有更好的细粒度，可以在 ReentrantLock 里面设置内部 Condition 类，可以实现分组唤醒需要唤醒的线程。
+* ReentrantLock 能实现非公平锁和公平锁。
+
+**synchronized**
+
+* synchronized 语法上简洁方便。
+* synchronized 是 JVM 方法，由编辑器保证加锁和释放锁。
+* sunchronized 只能实现非公平锁。
+
+**第3中答案**
+
+###### 1. 中断等待
+
+　　ReentrantLock 拥有 synchronized 相同的并发性和内存语义，此外还多了锁投票，定时锁等待和中断锁等候。
+
+　　线程 A 和 B 都要获取对象 O 的锁定，假设 A 获取了对象 O 锁，B 将等待 A 释放对 O 的锁定。
+
+* 如果使用 synchronized，如果 A 不释放，B 将一直等下去，不能被中断。
+* 如果使用 ReentrantLock，如果 A 不释放，可以使 B 在等待了足够长的时间以后，中断等待，而干别的事情。
+
+ReentrantLock 获取锁定有三种方式
+
+1. lock()，如果获取了锁立即返回，如果别的线程持有锁，当前线程则一直处于休眠状态，直到获取锁。
+2. tryLock()，如果获取了锁立即返回 true，如果别的线程正持有锁，立即返回 false。
+3. tryLock(long timeout, TimeUnit unit)，如果获取了锁立即返回 true，如果别的线程正持有锁，会等待参数给定的时间，在等待的过程中，如果获取了锁，就返回 true，如果等待超时，返回 false。
+4. lockInterruptibly：如果获取了锁立即返回，如果没有获取锁，当前线程处于休眠状态，直到获取锁定，或者当前线程被别的线程中断。
+
+###### 2. 可实现公平锁
+
+　　对于 Java ReentrantLock 而言，通过构造函数指定该锁是否是公平锁，默认是非公平锁。非公平锁的优点在于吞吐量比公平锁大。
+
+###### 3. 锁绑定多个条件
+
+　　锁绑定多个条件是指一个 ReentrantLock 对象可以同时绑定多个 Condition 对象，而在 synchronized 中，锁对象的 wait() 和 notify() 或 notifyAll() 方法可以实现一个隐含的条件，如果要和多于一个的条件关联的时候，就不得不额外地添加一个锁，而 ReentrantLock 则无须这样做，只需要多次调用 newCondition() 方法即可。
+
+###### synchronized 的优势
+
+　　synchronized 是在 JVM 层面上实现的，不但可以通过一些监控工具监控 synchronized 的锁定，而且在代码执行时出现异常，JVM 会自动释放锁，但是使用 Lock （ReentrantLock、ReentrantReadWriteLock ）则不行，Lock 是通过代码实现的，要保证锁一定会被释放，就必须将 unLock() 放到 finally{} 中。
+
+###### 应用场景
+
+　　在资源竞争不是很激烈的情况下，synchronized 的性能要优于 ReentrantLock，但是在资源竞争很激烈的情况下，synchronized 的性能会下降几十倍，但是 ReentrantLock 的性能能维持常态。
 
 #### * Condition 知识
 
+　　在 Java 中，对于任意一个 java 对象，它都拥有一组定义在 java.lang.Object 上监视器方法，包括 wait()、wait(long timeout)、notify()、notifyAll()，这些方法配合 synchronized 关键字一起使用可以实现等待/通知模式。
 
+　　同样，Condition 接口也提供了类似 Object 监视器的方法，通过与 Lock 配合来实现等待/通知模式。
+
+##### Condition 与 Object 监视器对比
+
+　　为了更好的了解 Condition 的特性，来对比一下两者的使用以及功能特性：
+
+| 对比项                                             | Object 监视器                  | Condition                                                    |
+| -------------------------------------------------- | ------------------------------ | ------------------------------------------------------------ |
+| 前置条件                                           | 获取对象的锁                   | 调用 Lock.lock 获取锁，调用 Lock.newCondition 获取 Condition 对象 |
+| 调用方式                                           | 直接调用，比如 object.notify() | 直接调用，比如 condition.await()                             |
+| 等待队列的个数                                     | 一个                           | 多个                                                         |
+| 当前线程释放锁进入等待状态                         | 支持                           | 支持                                                         |
+| 当前线程释放锁进入等待状态，在等待状态中不响应中断 | 不支持                         | 支持                                                         |
+| 当前线程释放锁并进入超时等待状态                   | 支持                           | 支持                                                         |
+| 当前线程释放锁并进入等待状态直到将来的某个时间点   | 不支持                         | 支持                                                         |
+| 唤醒等待队列中的一个线程                           | 支持                           | 支持                                                         |
+| 唤醒等待队列中的全部线程                           | 支持                           | 支持                                                         |
 
 #### * 锁的知识
 
+##### AQS
+
+　　AbstractQueuedSynchronzied 抽象对象式的同步器，AQS 定义了一套多线程访问共享资源的同步器框架，许多同步类实现都依赖于它，如常用的 ReentrantLock/Semaphore/CountDownLatch 等。
+
+　　AQS 维护了一个 volatile int state（代表共享资源）和一个 FIFO 线程等待队列（多线程争用资源被阻塞时会进入此队列）。
+
+　　state 的访问方式有三种：
+
+```java
+getState()
+setState()
+compareAndSetState()
+```
+
+　　AQS 定义两种资源共享方式：Exclusive（独占，只有一个线程能执行，如 ReentrantLock）和 Share（共享，多个线程可同时执行，如 Semaphore/CountDownLatch）。
+
+　　不同的自定义同步器争用共享资源的方式也不同。自定义同步器在实现时只需要实现共享资源 state 的获取与释放方式即可，至于具体线程等待队列的维护（如获取资源失败入队/唤醒出队等），AQS 已经在顶层实现好了。自定义同步器实现时主要实现以下几种方法：
+
+```java
+isHeldExclusively()：该线程是否正在独占资源。只有用到 condition 才需要去实现它。
+tryAquire(int)：独占方式。尝试获取资源，成功则返回 true，失败则返回 false.
+tryRelease(int)：独占方式。尝试释放资源，成功则返回 true，失败则返回 false。
+tryAcquireShared(int)：共享方式。尝试获取资源。负数表示失败；0 表示成功，但没有剩余可用资源；正数表示成功，且有剩余资源。
+tryReleaseShared(int)：共享方式。尝试释放资源，如果释放后允许唤醒后续等待节点返回 true，否则返回 false。
+```
+
+　　以 ReentrantLock 为例，state 初始化为 0，表示未锁定状态。A 线程 lock() 时，会调用 tryAcquire() 独占该锁并将 state+1。此后，其他线程再 tryAcquire() 时就会失败，直到 A 线程 unlock() 到 state = 0 （即释放锁）为止，其他线程才有机会获取该锁。当然，释放锁之前，A 线程自己是可以重复获取此锁的（state 会累加），这就是可重入的概念。但要注意，获取多少次就要释放多少次，这样才能保证 state 是能回到零态的。
+
+　　再以 CountDownLatch 为例，任务分为 N 个子线程去执行，state 初始化为 N（注意 N 要与线程个数一致）。这 N 个子线程是并行执行的，每个子线程执行完后 countDown() 一次，state 会 CAS 减一。等到所有子线程都执行完后（即 state = 0），会 unpark() 主调用线程，然后主调用线程就会 await() 函数返回，继续后余动作。
+
+　　一般来说，自定义同步器要么是独占方法，要么是共享方式，它们只需实现 tryAcquire-tryRelease、tryAcquireShared-tryReleaseShared 中的一种即可。但 AQS 也支持自定义同步器同时实现独占和共享两种方式，如 ReentrantReadWriteLock。
+
+##### CAS
+
+　　CAS 全称 Compare And Swap（比较与交换），是一种无锁算法，在不使用锁（没有线程被阻塞）的情况下实现多线程之间的变量同步。
+
+　　CAS 是乐观锁技术，当多个线程尝试使用 CAS 同时更新同一个变量时，只有其中一个线程能更新变量的值，而其他线程都失败，失败的线程并不会被挂起，而是被告知这次竞争中失败，并可以再次尝试。java.util.concurrent 包中的原子类就是通过 CAS 来实现了乐观锁。
+
+　　CAS 操作中包含三个操作数：
+
+1. 需要读写的内存位置（V）
+2. 进行比较的预期原值（A）
+3. 拟写入的新值（B）
+
+　　当且仅当内存位置 V 的值与预期原值 A 相匹配，那么处理器会自动将该位置值更新为新值 B（“比较 + 更新” 整体是一个原子操作），否则处理器不做任何操作。一般情况下，“ 更新 ” 是一个不断重试的操作。无论哪种情况，它都会在 CAS 指令之前返回该位置的值（在 CAS 的一些特殊情况下将仅返回 CAS 是否成功，而不提取当前值）。CAS 有效地说明了 “ 我认为位置 V 应该包含值 A；如果包含该值，则将 B 放到这个位置；否则，不要更改该位置，只告诉这个位置现在的值即可”。这其实和乐观锁的冲突检查 + 数据更新的原理是一样的。
+
+##### 乐观锁 VS 悲观锁
+
+　　乐观锁与悲观锁是一种广义上的概念，并不是特指某两种类型的锁，是人们定义出来的概念或思想，主要是体现了看待线程并发同步的不同角度。在 Java 和数据库中都有此概念对应的实际应用。
+
+![](image/悲观锁和乐观锁.png)
+
+　　根据从上面的概念描述可以发现：
+
+* 悲观锁适合写操作多的场景，先加锁可以保证写操作时数据正确。
+* 乐观锁适合读操作多的场景，不加锁的特点能够使其读操作的性能大幅提升，提高吞吐量。
+
+###### 乐观锁
+
+　　乐观锁：顾名思义，就是很乐观，乐观锁总是认为不存在并发问题，每次去拿数据的时候都认为别人不会修改，所以不会上锁，但是在更新的时候会判断一下之前有没有去更新这个数据。如果这个数据没有被更新，当前线程将自己修改的数据成功写入。如果数据已经被其他线程更新，则根据不同的实现方式执行不同的操作（例如报错或者自动重试）。
+
+　　乐观锁在 Java 中的使用，是无锁编程，常常采用的是 CAS 算法，在 Java 中 java.util.concurrent.atomic 包下面的原子变量类就是使用了乐观锁的一种实现方式 CAS(Compare and Swap 比较并交换)实现的，通过 CAS 自旋实现原子操作的更新。
+
+　　在更新时会判断线程在这之前有没有对数据进行修改，一般会使用 “ 数据版本机制 ” 或 “ CAS操作 ” 来实现。
+
+###### 悲观锁
+
+　　悲观锁：对于同一个数据的并发操作，总是假设最坏的情况，每次去拿数据的时候都认为别人会修改，因此在获取数据的时候会先加锁，确保数据不会被别的线程修改，这样别人想拿这个数据就会阻塞直到它拿到锁。Java 中，synchronized 关键字和 Lock 的实现类都是悲观锁。
+
+　　在对任意记录进行修改前，先尝试为该记录加上排他锁（exclusive locking）。
+
+　　如果加锁失败，说明该记录正在被修改，那么当前查询可能要等待或者抛出异常。具体响应方式由开发者根据实际需要决定。
+
+　　如果成功加锁，那么就可以对记录做修改，事务完成后就会解锁了。
+
+　　期间如果有其他对该记录做修改或加排他锁的操作，都会等待解锁或直接抛出异常。
+
+　　悲观锁在 Java 中的使用，就是利用各种锁。
+
+###### 悲观锁与乐观锁的调用
+
+```java
+    // --------悲观锁的调用方式--------
+    // synchronized
+    public synchronized void testMethod() {
+        // 操作同步资源
+    }
+
+    //ReentrantLock
+    private ReentrantLock lock = new ReentrantLock();// 需要保证多个线程使用同一个锁
+
+    public void modifyPublicResources() {
+        lock.lock();
+        // 操作同步资源。
+        lock.unlock();
+    }
+
+    // --------乐观锁的调用方式--------
+    private AtomicInteger atomicInteger = new AtomicInteger(); // 需要保证多个线程使用同一个 AtomicInteger
+
+    public void increment() {
+        atomicInteger.incrementAndGet(); // 执行自增1
+    }
+```
+
+　　通过调用方式示例，可以发现悲观锁基本都是在显示的锁定之后再操作同步资源，而乐观锁则直接去操作同步资源。而乐观锁之所以可以做到不锁定同步资源也可以正确的实现线程同步，是因为 CAS 在当前内存值 V 等于比较的值 A 值，才会通过原子操作将 V 更新为新值 B，如果不相等，则自旋重试。　
+
+##### 自旋锁 VS 适应性自旋锁
 
 
-#### * Java 中常见的锁
+
+#### Java 中常见的锁
+
+1. synchronized：可重入、非公平、独占锁。
+2. ReentrantLock：既可以构造公平锁又可以构造非公平锁，默认为非公平锁，可重入锁、独占锁。
+3. ReentrantReadWriteLock：读写锁的性能都会比排他锁要好，因为大多数场景读是多于写的。在读多于写的情况下，读写锁能够提供比排他锁更好的并发性和吞吐量。Java 并发包提供读写锁的实现是 ReentrantReadWriteLock。
+
+　　ReentrantReadriteLock 的特性：
+
+| 特性       | 说明                                                         |
+| ---------- | ------------------------------------------------------------ |
+| 公平性选择 | 支持非公平（默认）和公平的锁获取方式，吞吐量还是非公平优于公平。 |
+| 重进入     | 该锁支持重进入，以读写线程为例：读线程在获取了读锁之后，能够再次获取读锁。而写线程在获取了写锁之后能够再次获取写锁，同时也可以获取读锁。 |
+| 锁降级     | 遵循获取写锁、获取读锁在释放写锁的次序，写锁能够降级成为读锁 |
+
+　　总结
+
+* synchronized，它就是一个：非公平、悲观、独享、互斥、可重入的重量级锁。
+* ReentrantLock，它是一个默认非公平但可实现公平的、悲观、独享、互斥、可重入的重量级锁。
+* ReentrantReadWriteLock，它是一个默认非公平但可实现公平的、悲观、写独享、读共享、读写互斥、可重入的重量级锁。
 
 
 
-#### * 死锁
+#### 死锁
 
-#### * 使用 synchronized\wait、notifyAll 实现生产者-消费者模式
+　　死锁是指多个进程同时阻塞，并循环等待彼此占用的资源而无限期的僵持等待下去的局面，这样程序不可能正常终止。
 
+　　造成死锁的原因是：
 
+1. 系统提供的资源太少了，远不能满足并发进程对资源的需求。
+2. 进程推进顺序不合适，互相占用彼此需要的资源，同时请求对方占用的资源，这往往是因为程序设计不合理。
+
+##### java 死锁产生的四个必要条件
+
+1. 互斥条件：即当资源被一个线程使用时，别的线程不能被使用。即某个资源在一段时间内只能由一个进程占用，不能同时被两个或两个以上的进程占用。
+2. 不可抢占条件：进程所获得的资源在未使用完毕之前，资源请求者不能强制从资源占用者手中夺取资源，资源只能由资源占用者主动释放。
+3. 请求和保持条件：占用且等待，即当资源请求者在请求其他资源的同时保持对原有资源的占用。
+4. 循环等待条件：即存在一个等待队列，P1 占用 P2 的资源，P2 占用 P3 的资源，P3 占用 P1 的资源。这样就形成了一个等待环路。也就是若干个进程形成环形链，每个都占用对方申请的下一个资源。
+
+　　当上述四个条件都成立的时候，便形成死锁。当然，死锁的情况下如果打破上述任何一个条件，便可让死锁消失。
+
+##### 解决死锁的方法
+
+　　为使系统不发生死锁，必须设法破坏产生死锁的四个必要条件之一，或者允许死锁产生，但当死锁发生时能检测出死锁，并有能力实现恢复。
+
+　　一般有死锁的预防、死锁避免、死锁检测与死锁解除三种方法。
+
+1. 死锁预防：破坏导致死锁必要条件中的任意一个就可以预防死锁。
+
+   例如，要求用户申请资源时一次性申请所需要的全部资源，这就破坏了保持和等待的条件；将资源分层，得到上一层资源后，才能够申请下一层资源，它破坏了环路等待条件。
+
+   预防通常会降低系统的效率。
+
+2. 死锁避免：避免是指进程在每次申请资源时判断这些操作是否安全。
+
+   例如，使用银行家算法。一个小城镇的银行家，他向一群客户分别承诺了一定的贷款额度，算法要做的是判断对请求的满足是否会进入不安全状态，如果是，就拒绝请求；否则予以分配。
+
+   死锁避免算法的执行会增加系统的开销。
+
+3. 死锁检测：死锁预防和避免都是事前措施，而死锁的检测则是判断系统是否处于死锁状态，如果是，则执行死锁解除策略。
+
+4. 死锁解除：这是与死锁检测结合使用的，它使用的方式就是剥夺，即将某进程所拥有的资源强行回收，分配给其他的进程。
+
+　　很多时候实际锁的交叉可能涉及很多个，要想很好的避免只能认真仔细检查，一旦在一个同步方法中，或者说在一个锁的保护的范围中，调用了其他对象的方法时，就要十分的小心：
+
+1. 如果其他对象的这个方法会消耗比较长的时间，那么就会导致锁被持有了很长的时间。
+2. 如果其他对象的这个方法是一个同步方法，那么就要注意避免发生死锁的可能性了。
+
+　　总之是尽量避免在一个同步方法中调用其他对象的延时方法和同步方法。
+
+###### 1. 死锁预防
+
+* 打破互斥条件：允许进程同时访问资源（有些资源就是不可以同时访问的，无实用价值）。
+* 打破不可抢占条件：比如给进程设置优先级，高优先级的可以抢占资源（实现困难，降低系统性能）。
+* 打破请求和保持条件：实行资源预分配策略，即进程在运行前一次性的向系统申请它所需要的全部资源（不可预测资源的实用、利用率低、降低并发性）。
+* 破坏循环等待条件：采用这种策略，即把资源事先分类编号，按号分配，使进程在申请、占用资源时不会形成环路。所有进程对资源的请求必须严格按资源序号递增的顺序提出（限制和编号实现困难，增加系统开销，有些资源暂时不用也需要先申请，增加了进程对资源的占用时间）。
+
+###### 2. 死锁避免
+
+　　允许进程动态的申请资源，但系统在进行资源分配前，应先计算此次资源分配的安全性。若此次分配不会导致系统进入不安全状态，则将资源分配给进程，否则，让进程等待。
+
+　　所谓安全状态，是指系统能按某种进程推进顺序，为每个进程分配其所需要的资源，直至满足每个进程对资源的最大需求，是每个进程都可以顺序的完成。此时 P1P2P3... 为安全序列，如果系统无法找到一个安全序列，则称系统处于不安全状态。
+
+　　并非所有的不安全状态都是死锁状态，但当系统进入不安全状态后，便可能进入死锁状态，反之，只要系统处于安全状态，系统便可以避免进入死锁状态。
+
+　　银行家算法是著名的死锁避免算法。
+
+###### 3. 死锁检测
+
+　　不试图阻止死锁，而是当检测到死锁发生时，采取措施进行恢复。
+
+###### 4.死锁解除
+
+1. 资源剥夺法。挂起某些死锁进程，并抢占它的资源，将这些资源分配给其他的死锁进程。但应防止被挂起的进程长时间得不到资源时，而处于资源匮乏的状态。
+2. 资源撤销法。强制撤销一个或一部分进程并剥夺这些进程的资源，撤销的原则可以按进程的优先级和撤销进程代价的高低进行。
+3. 进程回退法。让一个或多个进程回退到足以回避死锁的地步，进程回退时资源被释放而不是被剥夺。要求系统保持进程的历史信息，设置还原点。
+
+#### 使用 synchronized\wait、notifyAll 实现生产者-消费者模式
+
+　　对于任何一种模式，在实现之前都应该明确这种模式对线程同步及互斥的要求。对于生产者-消费者模式，有如下同步及互斥要求：
+
+1. 线程互斥要求
+   * 生产者之间是互斥的，即同时只能有一个生产者进行生产
+   * 消费者之间是互斥的，即同时只能有一个消费者进行消费
+   * 生产者消费者之间是互斥的，也即生产者消费者不能同时进行生产和消费
+2. 线程同步要求
+   * 容器满时，生产者进行等待。
+   * 容器空时，消费者进行等待。
+
+　　有了上述需求，就可以选择互斥及同步工具了。对于互斥，采用 synchornized 关键字，对于线程同步，采用 wait()、notifyAll()。
+
+```java
+/**
+ * 使用 synchronized, wait(), notifyAll() 实现生产者-消费者模式
+ */
+public class syncTest {
+
+    public static void main(String[] args) {
+      	// 仓库
+        Cache cache = new Cache(10);
+        Producer p = new Producer(cache);
+        Consumer c = new Consumer(cache);
+        int producerCount = 4,consumerCount = 4;
+      	// 4 个生产者
+        for (int i = 0; i<producerCount;i++){
+            new Thread(p).start();
+        }
+      	// 4 个消费者
+        for (int i = 0; i<consumerCount;i++){
+            new Thread(c).start();
+        }
+    }
+
+    public static class Consumer implements Runnable {
+        private Cache cache; // 仓库
+        public Consumer(Cache cache){
+            this.cache = cache;
+        }
+
+        @Override
+        public void run() {
+            while (true){
+              	// 消费
+                cache.consume();
+                try {
+                    Thread.sleep(100);
+                } catch (InterruptedException e){
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+
+    public static class Producer implements Runnable {
+        private Cache cache; // 仓库
+        public Producer(Cache cache){
+            this.cache = cache;
+        }
+
+        @Override
+        public void run() {
+            while (true){
+              	// 生产
+                cache.produce();
+                try {
+                    Thread.sleep(100);
+                } catch (InterruptedException e){
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+
+    public static class Cache {
+        private final static int MAX_SIZE = 10; // 最多容纳 10 个产品
+        private int cacheSize = 0; // 当前产品的数量
+
+        public Cache() {
+            cacheSize = 0;
+        }
+
+        public Cache(int size) {
+            cacheSize = size;
+        }
+
+      	// 生产
+        public void produce() {
+            synchronized (this) {
+                while (cacheSize >= MAX_SIZE) { // 生产时，库存已满则等待
+                    try {
+                        System.out.println("缓存已满，生产者需要等待");
+                        wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                cacheSize++;
+                System.out.println("生产了一个产品。当前产品数量为：" + cacheSize);
+              	// 生产之后，唤醒等待的消费者
+                notifyAll();
+            }
+        }
+
+      	// 消费
+        public void consume() {
+            synchronized (this) {
+              	// 如果库存为空，则等待
+                while (cacheSize <= 0) {
+                    try {
+                        System.out.println("缓存为空，消费者需要等待");
+                        wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                cacheSize--;
+                System.out.println("消费了一个产品。当前产品数量为：" + cacheSize);
+                // 消费之后，唤醒等待的生产者。
+              	notifyAll();
+            }
+        }
+    }
+    
+}
+```
 
 #### * 使用信号量实现生产者-消费者模式
 
@@ -1841,11 +2783,196 @@ public static ExecutorService newFixedThreadPool(int nThreads) {
 
 
 
-#### * 哲学家就餐问题
+#### 哲学家就餐问题
 
+　　哲学家就餐问题是 1965 年由 Dijkstra 提出的一种线程同步的问题。
 
+　　问题描述：一圆桌前坐着 5 位哲学家，两个人中间有一只筷子，桌子中央有面条，哲学家思考问题，当饿了的时候拿起左右两只筷子吃饭，并且一次只能拿起一根筷子，必须拿到两只筷子才能吃饭。
 
-#### * 读者写者问题
+　　如果所有哲学家同时拿起左手边的筷子，那么所有哲学家都在等待其他哲学家吃完并释放自己手中的筷子，导致死锁。
+
+　　解决办法：
+
+1. 添加一个服务生，只有当经过服务生同意之后才能拿筷子，服务生负责避免死锁产生。
+2. 每个哲学家必须确定自己左右手的筷子都可用的时候，同时拿起两只筷子进餐，吃完之后同时放下两只筷子。
+3. 规定每个哲学家拿筷子时必须拿序号小的那只，这样最后一位未拿到筷子的哲学家只剩下序号大的那只筷子，不能拿起，剩下的这只筷子就可以被其他哲学家使用，避免了死锁。这种情况不能很好的利用资源。
+
+代码实现：实现第 2 种方案
+
+```java
+/**
+ * 每个哲学家相当于一个线程
+ */
+public class Philosopher extends Thread {
+    private String name;
+    private Fork fork;
+
+    public Philosopher(String name, Fork fork) {
+        super(name);
+        this.name = name;
+        this.fork = fork;
+    }
+
+    @Override
+    public void run() {
+        while (true) {
+            thinking();
+            fork.takeFork();
+            eating();
+            fork.putFork();
+        }
+    }
+
+    public void eating() {
+        System.out.println("I am Eating:" + name);
+        try {
+            sleep(1000); // 模拟吃饭，占用一段时间资源
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public void thinking() {
+        System.out.println("I am Thinking:" + name);
+        try {
+            sleep(1000); // 模拟思考
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+·		// 筷子
+    public static class Fork {
+        // 6 只筷子，初始为都未被用
+        private boolean[] used = {false, false, false, false, false, false};
+
+        public synchronized void takeFork() {
+            String name = Thread.currentThread().getName();
+            int i = Integer.parseInt(name);
+          	// 左边的筷子可用或者右边的筷子可用
+            while (used[i] || used[(i + 1) % 5]) {
+                try {
+                    wait();// 如果左右手有一只正被使用，等待
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+          	// 两边的筷子都可用
+            used[i] = true;
+            used[(i + 1 % 5)] = true;
+        }
+
+        /**
+         * 必须同时释放左右手的筷子
+         */
+        public synchronized void putFork() {
+            String name = Thread.currentThread().getName();
+            int i = Integer.parseInt(name);
+            used[i] = false;
+            used[(i + 1) % 5] = false;
+            notifyAll(); // 唤醒其他线程
+        }
+    }
+
+    public static void main(String[] args) {
+        Fork fork = new Fork();
+        new Philosopher("0",fork).start();
+        new Philosopher("1",fork).start();
+        new Philosopher("2",fork).start();
+        new Philosopher("3",fork).start();
+        new Philosopher("4",fork).start();
+    }
+}
+```
+
+　　分析：上述解决方案解决了死锁问题。可以看到最多只能有两条相邻的 eating 结果，因为每个时刻最多能够满足两个人同时进餐，且两人座位不相邻。
+
+#### 读者写者问题
+
+　　这是一个非常经典的题目，题目大意如下：有一个写者很多读者，多个读者可以同时读文件，但写者在写文件时不允许有读者在读文件，同样有读者读时也不能写。
+
+　　允许多个进程同时对数据进行读操作，但是不允许读和写以及写和写操作同时发生。
+
+　　一个整形变量 count 记录在对数据进行读操作的进程数量，一个互斥量 count_mutex 用于对 count 加锁，一个互斥量 data_mutex 用于对读写的数据加锁。思路：
+
+　　利用 java.util.concurrent.locks.ReentrantReadWriteLock（读写锁）。
+
+　　写者写文件时持有写锁，此时只能有唯一一个写者写文件，且读者不能读文件。
+
+　　读者读文件时持有读锁，此时多个读者可以同时读取文件，但写者不能写文件。
+
+```java
+/**
+ * 读者写者问题
+ */
+public class ReaderWriter {
+
+    public static void main(String[] args) {
+        // 一个读写锁
+        ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
+        for (int i = 0; i < 10; i++) {
+            // 10 个读者
+            new Thread(new Reader(lock)).start();
+        }
+        // 1 个写者
+        new Thread(new Writer(lock)).start();
+    }
+    
+    public static class Reader implements Runnable {
+        private ReentrantReadWriteLock lock;
+
+        public Reader(ReentrantReadWriteLock lock) {
+            this.lock = lock;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                  	// 读锁锁住
+                    lock.readLock().lock();
+                    System.out.println(Thread.currentThread().getName() + " reading");
+                    TimeUnit.SECONDS.sleep(3);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                } finally {
+                  	// 读锁解锁
+                    lock.readLock().unlock();
+                }
+            }
+        }
+    }
+
+    public static class Writer implements Runnable {
+        private ReentrantReadWriteLock lock;
+
+        public Writer(ReentrantReadWriteLock lock) {
+            this.lock = lock;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    Thread.sleep(1000L);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                try {
+                  	// 写锁锁住
+                    lock.writeLock().lock();
+                    System.out.println(Thread.currentThread().getName() + " writing");
+                    TimeUnit.SECONDS.sleep(10);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                } finally {
+                  	// 写锁释放
+                    lock.writeLock().unlock();
+                }
+            }
+        }
+    }
+}
+```
 
 
 
